[gd_scene load_steps=12 format=3 uid="uid://201mvvws5bss"]

[ext_resource type="Script" path="res://scenes/menu/main_menu/main_menu.gd" id="1_spdru"]
[ext_resource type="PackedScene" uid="uid://csqssdsto8mo2" path="res://scenes/levels/test/main_game.tscn" id="2_74p57"]
[ext_resource type="Theme" uid="uid://cvocwk6x1wj7h" path="res://themes/global.tres" id="3_6k5w6"]
[ext_resource type="PackedScene" uid="uid://dwiv5trrt3qdb" path="res://scripts/visual_effects/word_scramble/word_scramble.tscn" id="3_7q146"]
[ext_resource type="Shader" path="res://shaders/glitch/glitch.gdshader" id="3_ptxr3"]
[ext_resource type="Shader" path="res://shaders/chromatic/chromatic_aberration.gdshader" id="6_1dld4"]

[sub_resource type="Animation" id="Animation_0vswc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glitch/Glitch:material:shader_parameter/shake_color_rate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.022]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Glitch/Glitch:material:shader_parameter/shake_power")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5.0]
}

[sub_resource type="Animation" id="Animation_b51s4"]
resource_name = "in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glitch/Glitch:material:shader_parameter/shake_color_rate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.307786, 1),
"update": 0,
"values": [0.022, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Glitch/Glitch:material:shader_parameter/shake_power")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.307786, 1),
"update": 0,
"values": [5.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mx4he"]
_data = {
"RESET": SubResource("Animation_0vswc"),
"in": SubResource("Animation_b51s4")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yeqk5"]
shader = ExtResource("6_1dld4")
shader_parameter/strength_x = 1.0
shader_parameter/strength_y = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_prnj0"]
shader = ExtResource("3_ptxr3")
shader_parameter/self_only = false
shader_parameter/shake_power = 5.0
shader_parameter/shake_rate = 1.0
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 20.0
shader_parameter/shake_color_rate = 0.022

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_spdru")
next_scene = ExtResource("2_74p57")

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mx4he")
}
autoplay = "in"

[node name="BG" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1024.0
offset_bottom = 576.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -128.0
offset_right = 397.0
grow_vertical = 0
scale = Vector2(0.3, 0.3)
theme = ExtResource("3_6k5w6")
theme_override_constants/separation = 30
vertical = true

[node name="NewGame" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "New Game"
alignment = 0

[node name="WordScramble" parent="BoxContainer/NewGame" instance=ExtResource("3_7q146")]
speed = 0.03
cycle = 0

[node name="LoadGame" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "Load Game"
alignment = 0

[node name="WordScramble" parent="BoxContainer/LoadGame" instance=ExtResource("3_7q146")]
speed = 0.03
cycle = 0

[node name="Chromatic" type="BackBufferCopy" parent="."]
position = Vector2(512, 288)
scale = Vector2(5.10299, 2.8804)
copy_mode = 2
metadata/_edit_lock_ = true

[node name="Chromatic2" type="ColorRect" parent="Chromatic"]
material = SubResource("ShaderMaterial_yeqk5")
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Glitch" type="BackBufferCopy" parent="."]
position = Vector2(512, 288)
scale = Vector2(5.10299, 2.8804)
copy_mode = 2

[node name="Glitch" type="ColorRect" parent="Glitch"]
material = SubResource("ShaderMaterial_prnj0")
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 101.0
mouse_filter = 2

[connection signal="pressed" from="BoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="BoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
