extends Control

@export var next_scene: PackedScene
var a:
	get: return %NewGame
func _ready() -> void:
	Input.set_mouse_mode(Input.MOUSE_MODE_VISIBLE)
	#Animate.intro(a, Vector2(1,1), 1.0)

func _on_new_game_pressed() -> void:
	GameSaveService.erase_prepared()
	_change_scene()

func _on_load_game_pressed() -> void:
	var err := GameSaveService.prepare_from_file("test_save")
	if err != OK:
		push_warning("Error loading save: %s"%error_string(err))
		return
	_change_scene()
	
func _change_scene() -> void:
	SceneManager.set_target_scene(next_scene)
	SceneManager.change_scene()
